fix: center align the list item text

--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
@@ -22,6 +22,7 @@
   flex: 0 0 auto;
   white-space: nowrap;
   color: var(--em-select-list-item-left-label-color-default, #212129);
+  align-items: center;
 }
 
 .listItem .rightContent {
